# argos

./: .gitignore  API_DOCUMENTATION.md  ASSIGNMENT_ANALYSIS.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  argos.db  conftest.py  docker-compose.yml  pyproject.toml  pytest.ini  setup.cfg  setup_and_test.sh  test_argos.db  test_argos_events.db
.github/workflows/: ci.yml
api/: app.py  dependencies.py
api/models/: course_dto.py  section_dto.py  student_dto.py
api/routers/: courses.py  sections.py  students.py
argos/scripts/: clean_project.sh  init_db.py  load_demo_data.py  rebuild_state_demo.py  reset_db.py  reset_db.sh  run_api.py  run_api.sh  run_demo_data.sh  run_migrations.py  run_services_demo.py
common/concurrency/: lock_manager.py  service_registry.py  thread_safe_dict.py  version_guard.py  worker.py
data/migrations/: m001_add_student_status.py  m002_add_enrollment_created_at.py
devops/docker/: Dockerfile.api  Dockerfile.services
devops/summary/: phase10_summary.txt  phase9_summary.txt
docs/design/: ARGOS_Design_Document.md
docs/report/: persistence_summary.md
docs/reports/: performance_report.md  security_report.md  testing_report.md
ml/: __init__.py
ml/enrollment_predictor/: __init__.py  generate_synthetic_enrollment.py
ml/room_usage_optimizer/: __init__.py
reports/: report_factory.py
reports/base/: base_report.py
reports/implementations/: admin_summary_report.py  compliance_audit_report.py  lecturer_course_performance_report.py
reports/outputs/: admin_demo.json  compliance_demo.json  performance_demo.json  reporting_summary.txt
scripts/: demo_run.sh  phase10_docs.sh  phase6_ml.sh  phase6_train_and_test.sh  phase7_all.sh  phase8_reports.sh  phase9_devops.sh  run_api.py  run_services_demo.py  tmp_train_predictor.py
src/argos/: __init__.py  cli.py
tests/: conftest.py  test_cli.py
tests/api/: test_enrollment_api.py  (+1 more)
(+80 files in other folders)
