[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "argos"
version = "0.1.0"
description = "A starting point for the Argos command-line toolkit."
readme = "README.md"
authors = [{ name = "Argos Contributors" }]
license = { file = "LICENSE" }
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = []

[project.scripts]
argos = "argos.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/argos"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
