[metadata]
name = argos-academic-system
version = 1.0.0
description = Modular Academic Management System
long_description = file: README.md
long_description_content_type = text/markdown
author = Francis Munganga
license = MIT
license_file = LICENSE

[options]
packages = find:
include_package_data = True
install_requires =
    fastapi
    uvicorn
    pydantic
    httpx
    sqlite-utils

[options.extras_require]
dev =
    pytest
    Faker

[options.packages.find]
exclude =
    tests
    scripts
